# exoptima

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
exoptima/: __init__.py  app.py  cli.py
exoptima/config/: computation.py  conditions.py  instruments.py  layout.py
exoptima/core/: app_logic.py  observability.py  precision.py  rv_models.py  state.py
exoptima/tabs/: controls.py  display.py  export.py  interface.py
